docker/kube/database.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: database
  name: database
spec:
  replicas: 1
  selector:
    matchLabels:
      app: database
  template:
    metadata:
      labels:
        app: database
    spec:
      containers:
        - env:
            - name: POSTGRES_DB
              value: db
            - name: POSTGRES_PASSWORD
              value: changeme
            - name: POSTGRES_USER
              value: postgres
          image: postgres:14.2
          name: database
          ports:
            - containerPort: 5432
              name: "postgres"
          resources: {}
      restartPolicy: Always
---
apiVersion: v1
kind: Service
metadata:
  name: database
  labels:
    app: database
spec:
  type: NodePort
  selector:
    app: database
  ports:
    - name: "postgres"
      protocol: TCP
      port: 5432
      targetPort: 5432
      nodePort: 30432
